--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
+    "apollo-link-token-refresh": "^0.4.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
     "graphql": "^14.7.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
@@ -33,6 +36,10 @@
     "@graphql-codegen/cli": "2.13.12",
     "@graphql-codegen/client-preset": "1.1.4",
     "@graphql-codegen/introspection": "2.2.1",
-    "@types/graphql": "^14.5.0"
+    "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
