--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: "http://localhost:3001/graphql"
-documents: "app/graphql/*.graphql"
+documents: "app/graphql/**/*.graphql"
 generates:
   app/generated/graphql.tsx:
     plugins:
