--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/react-hoc": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "tslib": "^1.14.1",
     "typescript": "4.9.3"
   },
@@ -40,6 +42,7 @@
     "@types/jwt-decode": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "redux-devtools": "^3.7.0",
     "tailwindcss": "^3.2.4"
   }
 }
