--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@apollo/react-common": "^3.1.4",
     "@apollo/react-hoc": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
@@ -30,6 +34,7 @@
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "tslib": "^1.14.1",
     "typescript": "4.9.3"
