--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "tslib": "^1.14.1",
