--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp _redirects .next/",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint",
     "gen": "graphql-codegen --config codegen.yml"
   },
@@ -19,7 +20,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
+    "@netlify/plugin-nextjs": "^4.29.2",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -39,7 +42,8 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "tslib": "^1.14.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.12",
