--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && cp _redirects .next/",
+    "build": "next build",
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
@@ -37,6 +37,7 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
