--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "18.0.9",
     "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
